<?xml version="1.0"?>
<package>
  <name>navigation_services</name>
  <version>0.0.1</version>
  <description>The navigation_services package for golem-III</description>
  <maintainer email="raulpl25@gmail.com">RaulPL</maintainer>

  <license>BSD</license>

  <url type="GOLEM group">http://golem.iimas.unam.mx/</url>
  <author email="raulpl25@gmail.com">Raul Peralta-Lozada</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>json_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>json_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>std_srvs</build_depend>

</package>
